--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/erinspice/chahta-language-lessons/issues"
   },
-  "homepage": "https://github.com/erinspice/chahta-language-lessons"
+  "homepage": "https://github.com/erinspice/chahta-language-lessons",
+  "dependencies": {
+    "body-parser": "^1.12.4",
+    "cheerio": "^0.19.0",
+    "cookie-parser": "^1.3.5",
+    "ejs": "^2.3.1",
+    "express": "^4.12.4",
+    "express-session": "^1.11.2",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
+    "request": "^2.57.0"
+  }
 }
