--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/erinspice/chahta-language-lessons",
   "dependencies": {
+    "async": "^1.2.1",
     "cheerio": "^0.19.0",
     "express": "^4.12.4",
     "request": "^2.57.0"
