--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^1.2.1",
     "cheerio": "^0.19.0",
     "express": "^4.12.4",
+    "morgan": "^1.6.0",
     "request": "^2.57.0"
   }
 }
